--- a/system/templates/news.tickers.html.twig
+++ b/system/templates/news.tickers.html.twig
@@ -1,22 +1,23 @@
-  <div class="my-3 p-3 bg-white rounded box-shadow">
-      <h6 class="border-bottom border-gray pb-2 mb-0">Notas de desenvolvimento </h6>
-	  	{% for ticker in tickers %}
-	<tr bgcolor="{{ getStyle(i) }}">
-		<td style="width: 16px;"><img src="{{ template_path }}/images/news/icon_{{ ticker.icon }}_small.gif"/></td>
-		<td style="width: 80px;">{{ ticker.date|date("j M Y") }}</td>
-		<td>{{ ticker.body|raw }}</td>
-	</tr>
-	{% set i = i + 1 %}
-	{% endfor %}
+    <div class="my-3 p-3 bg-white rounded box-shadow">
+      <h6 class="border-bottom border-gray pb-2 mb-0">Ankrahmun Updates</h6>
       <div class="media text-muted pt-3">
         <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
         <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
           <div class="d-flex justify-content-between align-items-center w-100">
-            		<td style="width: 80px;">{{ ticker.date|date("j M Y") }}</td>
+            <strong class="text-gray-dark">          <span class="d-block">{{ ticker.body|raw }}</span>
+</strong>
+            <td style="width: 80px;">{{ ticker.date|date("j M Y") }}</td>
           </div>
-          <span class="d-block">{{ ticker.body|raw }}</span>
+          <span class="d-block">
+          	  	{% for ticker in tickers %}
+	<tr bgcolor="{{ getStyle(i) }}">
+		<td style="width: 16px;"><img src="{{ template_path }}/images/news/icon_{{ ticker.icon }}_small.gif"/></td>
+		<td>{{ ticker.body|raw }}</td>
+	</tr>
+{% set i = i + 1 %}
+{% endfor %}
+          </span>
         </div>
       </div>
-<br/>
 
-   
+
