--- a/templates/ShadowCores/style.css
+++ b/templates/ShadowCores/style.css
@@ -3,7 +3,13 @@ body {
   overflow-x: hidden;
   /* Prevent scroll on narrow devices */
 }
-
+.background { 
+  background: url(https://www.tibiabr.com/wp-content/uploads/2020/02/paulo-silvente-casual-teamhunt-on-catacombs-duo-ed-rp.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 body {
   padding-top: 56px;
   font-family: "proximanova", sans-serif;
@@ -52,7 +58,11 @@ body {
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
 }
-
+main {
+  position: fixed; /* Set the navbar to fixed position */
+  top: 10%; /* Position the navbar at the top of the page */
+  left: 20%;
+}
 .nav-underline .nav-link {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -116,25 +126,29 @@ body {
     z-index: 10;
     position: relative;
 }
+a {
+  color: #fff;
+}
+.navbar-nav a:hover {
+  color: rgba(255, 255, 255, 0.5);  
+  font-style: none;
+}
 
 .sidebar {
-  display: flex;
-  flex-direction: column;
   background-color: #1d3d5b;
-  margin: 5px auto;
-  width: 245px;
+   width: 350px;
+ /* position: fixed;
   float: left;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   border-left: 1px solid #080808;
   border-right: 1px solid #080808;
-  border-bottom: 0.7px solid #080808;
-  margin-left: -21rem;
-  margin-top: -33rem;
-  z-index: 10;
-  border-radius: 2px 2px 2px 2px;
+  margin-left: -35%;
+  margin-top: -68%;
+  border-radius: 12px 12px 12px 12px;
+  text-align: center; */
 }
 a {
   font-style: none;
